ban alt formes from enc areas that can't have them